# aft

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  STRUCTURE.md
.alfonso/plans/: subc-e2e-lane.md
.alfonso/release-notes/: v0.35.0.md  v0.35.3.md  v0.35.4.md  v0.36.1.md  v0.38.0.md  v0.39.1.md  v0.39.4.md  v0.40.3.md  v0.42.0.md  v0.44.0.md  v0.45.0.md  v0.45.1.md  v0.46.0.md  v0.47.0.md  v0.47.1.md  v0.47.2.md  v0.47.3.md  v0.48.0.md  v0.48.1.md
.alfonso/reports/: brush-parser-scanner-spike-2026-07-17.md  brush-windows-shell-spike-2026-07-17.md  sandbox-s1b-firstparty.md  url-workflow-field-test-2026-07-17.md
.config/: nextest.toml
.cortexkit/: aft.jsonc  alfonso.jsonc
.github/: actionlint.yaml
.github/workflows/: _e2e-suite.yml  _unit-suite.yml  e2e-iter.yml  release.yml  testbox.yml  tests.yml
assets/: aft.schema.json
benchmarks/: GREP_GLOB_LATENCY.md  borrowed-search-drift.py  grep-glob-vs-rg.py
benchmarks/aft-search/: README.md  run.py
benchmarks/codegraph-vs-aft-agent/src/: cli.ts  util.ts
benchmarks/codegraph-vs-aft-retrieval/src/: util.ts
benchmarks/settle-time/: RESULTS.md  run-benchmark.py
crates/aft/: Cargo.toml
crates/aft-tokenizer/: Cargo.toml  build.rs
crates/aft/src/: artifact_owner.rs  ast_grep_lang.rs  backup.rs  cache_freshness.rs  callgraph.rs  calls.rs  checkpoint.rs  cold_build_limiter.rs  config.rs  config_resolve.rs  context.rs  edit.rs  effective_path.rs  extract.rs  format.rs  fs_lock.rs  grep_executor.rs  harness.rs  imports.rs  indent.rs  jsonc.rs  language.rs  legacy_partitions.rs  lib.rs  logging.rs  lsp_hints.rs  main.rs  memory.rs  migrate_storage.rs  parser.rs  path_identity.rs  protocol.rs  query_shape.rs  readonly_artifacts.rs  response_finalize.rs  root_cache.rs  run_tool_call.rs  runtime_drain.rs  runtime_registry.rs  sandbox_profile.rs  (+16 more)
crates/aft/tests/: callgraph_refresh_bench.rs  callgraph_store_test.rs  logging_test.rs  lsp_registry_test.rs  sandbox_launch_probe.rs  semantic_test.rs  semantic_validation_test.rs
docs/: borrowed-search-exec-investigation.md  config.md  tools.md
docs/investigations/: subc-egress-hol-2026-07-14.md
scripts/: ally-gate.sh  capture-config-parity.ts  capture-subc-parity.ts  fetch-subc-core.sh  flake-hunt.sh  gated-push.sh  release.sh  rust-test-gate.sh  rust-test-inventory-proof.py  sandbox-canary.sh  validate-packages.mjs  watch-ci.sh
spikes/brush-parser-spike/: Cargo.toml
spikes/brush-parser-spike/src/: corpus.rs  main.rs
spikes/sandbox-s1/: run-linux.sh
tests/docker/: Dockerfile.build-linux  Dockerfile.linux-x64  test-e2e.sh
tests/helpers/: git-env.ts
tests/macos-e2e/: run.sh
tests/pi-rpc/: aft-tools.test.ts  bg-bash.test.ts  hoisted-replacement.test.ts  permission-full.test.ts
tests/pi-rpc/helpers/: spawn.ts
tests/windows-e2e/: mock-server.js  run.ps1
(+470 files in other folders)
