[workspace]
resolver = "2"
members = ["crates/aft", "crates/aft-tokenizer"]

[profile.release]
lto = true
codegen-units = 1
strip = true

# Local staging builds (dev binaries for the daemon/NDJSON caches). No LTO +
# default parallel codegen: a dev-bounce binary is rebuilt many times a day,
# and LTO buys ~10-15% runtime at a link cost that dominates every iteration
# (dist-grade linking on dev builds was the wrong trade; grok-build measured
# the same split at 2.2x build time). GitHub releases keep [profile.release]
# (fat LTO, stripped) — maximum optimization for shipped binaries.
[profile.stage]
inherits = "release"
lto = false
codegen-units = 16
# Line tables + symbol names so `sample`/Instruments on a staged dev module
# resolves real function names (release inherits strip=true, which left a
# 91%-CPU thread anonymous during live diagnosis). Costs a few MB of binary
# size on local staging builds only; GitHub releases stay stripped.
strip = false
debug = 1
# "unwind" instead of "abort" so catch_unwind works — required because
# the ort crate panics (instead of returning Err) when dlopen fails on
# an incompatible libonnxruntime.so. With "abort", that panic kills the
# entire aft process and takes down all tools. With "unwind", the
# catch_unwind in configure.rs catches it and degrades gracefully.
panic = "unwind"
